--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+//app build.gradle
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
